tests/test_files/default/neg/bad_flow_seal1.s
	mov r1 pc
	restrict r1 (SU, GLOBAL)              ; FAIL: attempt to restrict SCap with a Seal Permission
	halt
